[package]
name = "bb-gamebot-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
fstrings = "0.2"
chrono = "0.4"
backtrace = "0.3"
anyhow = {version = "1", features = ["backtrace"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
rand = "0.8"
zmq = "0.10"
signal-hook="0.3"

